--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,10 @@
+$buttonColor: rgba(236, 0, 140, 1);
+$buttonShadow: rgba(51, 51, 51, .7);
+
 .draggable {
-  background-color: rgba(236, 0, 140, 1);
+  background-color: $buttonColor;
   border-radius: 4px;
-  box-shadow: 1px 1px 2px 0 rgba(51, 51, 51, .7);
+  box-shadow: 1px 1px 2px 0 $buttonShadow;
   height: 60px;
   left: 100px;
   position: absolute;
