--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,13 +1,30 @@
-$buttonColor: rgba(236, 0, 140, 1);
-$buttonShadow: rgba(51, 51, 51, .7);
+@import 'fonts';
+
+$font-color: rgba(255, 255, 255, 1);
+$button-color: rgba(236, 0, 140, 1);
+$button-shadow: rgba(51, 51, 51, .7);
+
+$main-font: 'HUGEAvantGardeBold';
 
 .draggable {
-  background-color: $buttonColor;
+  align-items: center;
+  background-color: $button-color;
   border-radius: 4px;
-  box-shadow: 1px 1px 2px 0 $buttonShadow;
+  box-shadow: 1px 1px 2px 0 $button-shadow;
+  display: flex;
   height: 60px;
+  justify-content: center;
   left: 100px;
   position: absolute;
   top: 100px;
   width: 150px;
+
+  &:hover {
+    box-shadow: 2px 2px 4px 0 fade-out($button-shadow, .2);
+  }
+
+  p {
+    color: $font-color;
+    font-family: $main-font;
+  }
 }
