--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -5,5 +5,5 @@
   url('fonts/huge_agb_v5-webfont.ttf') format('truetype'),
   url('fonts/huge_agb_v5-webfont.svg#svgFontName') format('svg');
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
 }
