--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,31 +1,7 @@
-//@import 'fonts';
-
-$main-font: 'HUGEAvantGardeBold';
-
-$font-color: rgba(255, 255, 255, 1);
-$button-color: rgba(236, 0, 140, 1);
-$button-shadow: rgba(51, 51, 51, .7);
-
 .draggable {
-  background-color: $button-color;
-  border-radius: 4px;
-  box-shadow: 1px 1px 2px 0 $button-shadow;
-  display: flex;
-  justify-content: center;
-  left: 100px;
   position: absolute;
-  top: 100px;
-  width: 180px;
+}
 
-  &:hover {
-    box-shadow: 2px 2px 4px 0 fade-out($button-shadow, .2);
-  }
-
-  p {
-    color: $font-color;
-    cursor: pointer;
-    font-family: $main-font;
-    font-size: 20px;
-    user-select: none;
-  }
+.hidden {
+  visibility: hidden;
 }
